--- a/components/input-number/index.wxss
+++ b/components/input-number/index.wxss
@@ -5,11 +5,11 @@
 .i-input-number view {
   display: inline-block;
   text-align: center;
-  width: 25px;
-  height: 25px;
+  width: 50rpx;
+  height: 50rpx;
   box-sizing: border-box;
   vertical-align: middle;
-  font-size: 14px;
+  font-size: 28rpx;
   border: 1rpx solid #FF2DCD;
 }
 
@@ -30,11 +30,11 @@
   display: inline-block;
   text-align: center;
   vertical-align: middle;
-  height: 25px;
-  width: 25px;
-  margin: 0 3px;
+  height: 50rpx;
+  width: 50rpx;
+  margin: 0 6rpx;
   min-height: auto;
-  font-size: 14px;
+  font-size: 28rpx;
 }
 
 .i-input-number-disabled {
