--- a/pages/goods/index.wxml
+++ b/pages/goods/index.wxml
@@ -26,18 +26,18 @@
             <view data-id="{{item.id}}" class="goods">
               <view class="hdsp">
                 <text class="{{item.s?'hdcss':''}}">{{item.s?'货道:'+item.s:''}}</text>
-                <text >{{item.commodityName}}</text>
+                <text style="height:44rpx">{{item.commodityName}}</text>
               </view>
-              <view wx:if="{{isVip == 1 && isFirstBuy==1}}">
+              <view wx:if="{{isVip == 1 && isFirstBuy==1}}" class="good-price">
                 <view class="coltex vipPrice">会员价：￥{{price.price(item.costPrice)}}</view>
                 <view class="coltex price">
                   <text style='text-decoration:line-through;color:#000;margin-left:0px;'>原价：￥{{price.price(item.retailPrice)}}</text>
                 </view>
               </view>
-              <view wx:else>
+              <view wx:else class="good-price">
                 <view class="coltex price">购买价：￥{{price.price(item.retailPrice)}} </view>
                 <view class="coltex vipPrice">
-                  <text style='text-decoration:color:#000;margin-left:0px;'>会员价：￥{{price.price(item.costPrice)}}  </text>
+                  <text style='text-decoration:color:#000;margin-left:0px;'>会员价：￥{{price.price(item.costPrice)}} </text>
                 </view>
               </view>
 
@@ -77,16 +77,14 @@
       </view>
     </scroll-view>
   </view>
-  <view wx:else>
-    <image src='../images/scancode.jpg' class='p' bindtap="click"></image>
-    <text class='txt'>扫码进入小程序</text>
+  <view wx:else class="scan">
+    <!-- <image src='../images/scancode.jpg' class='p' bindtap="click"></image>
+    <text class='txt'>扫码进入小程序</text> -->
+    <view class="scan-sm" bindtap="click">
+      <view style="font-size:34rpx;color:#777;font-weight:600">扫描设备的二维码</view>
+      <image src='../images/scancode.png' style="width:160rpx;height:160rpx;"></image>
+    </view>
   </view>
-  <view class="mask" catchtouchmove="preventTouchMove" wx:if="{{hidden}}"></view>
-  <view class="modalDlg" wx:if="{{hidden}}">
-    <text class="modalText">需授权后，进入小程序！</text>
-    <button class="modalButton" size='default' open-type="getUserInfo" bindgetuserinfo="getUserInfo">确定 </button>
-  </view>
-
 </view>
 <!-- 购物车 -->
 <view class="drawer_screen" bindtap="showCartList" data-statu="close" wx:if="{{showCart}}"></view>
@@ -94,7 +92,8 @@
   <view style='background:#F0F0F0;height:30px'>
     <label class='label-cart-bar'>
       <label style='padding:5px'>已选商品</label>
-      <label style='padding:5px' bindtap='clearCartList'><i-icon type="trash" size="20"/>清空购物车</label>
+      <label style='padding:5px' bindtap='clearCartList'>
+        <i-icon type="trash" size="20" />清空购物车</label>
     </label>
 
   </view>
@@ -107,15 +106,15 @@
         <view style='display:flex;  align-items: center; justify-content: space-between;'>
           <label class='activity-color'>¥ {{item.retailPrice}} x {{item.count}}</label>
           <!-- <input-number value="{{item.count ||0}}" min="0" max="{{item.num}}" step="1" bindchange="addNumber" data-index='{{index}}'  /> -->
-               <view wx:if="{{item.num>0 && tp==1 && isVip == 1 && isFirstBuy==1 }}">
-                  <input-number value="{{item.count ||0}}" min="0" max="1" step="1" bindchange="{{count<1 || item.count==1?'addNumber':'noChangeNumber'}}" data-index='{{index}}'  />
-                </view>
-                <view wx:elif="{{item.num>0 && tp==1}}">
-                  <input-number value="{{item.count ||0}}" min="0" max="{{item.num}}" step="1" bindchange="addNumber" data-index='{{index}}' />
-                </view>
-                <view wx:elif="{{item.num>0 }}">
-                  <input-number value="{{item.count ||0}}" min="0" max="1" step="1" bindchange="{{count<1 || item.count==1?'addNumber':'noChangeNumber'}}" data-index='{{index}}'  />
-                </view>
+          <view wx:if="{{item.num>0 && tp==1 && isVip == 1 && isFirstBuy==1 }}">
+            <input-number value="{{item.count ||0}}" min="0" max="1" step="1" bindchange="{{count<1 || item.count==1?'addNumber':'noChangeNumber'}}" data-index='{{index}}' />
+          </view>
+          <view wx:elif="{{item.num>0 && tp==1}}">
+            <input-number value="{{item.count ||0}}" min="0" max="{{item.num}}" step="1" bindchange="addNumber" data-index='{{index}}' />
+          </view>
+          <view wx:elif="{{item.num>0 }}">
+            <input-number value="{{item.count ||0}}" min="0" max="1" step="1" bindchange="{{count<1 || item.count==1?'addNumber':'noChangeNumber'}}" data-index='{{index}}' />
+          </view>
         </view>
       </view>
     </view>
