--- a/pages/goods/index.wxss
+++ b/pages/goods/index.wxss
@@ -4,17 +4,37 @@
     overflow: hidden;
     background-color: #fff;
 }
+.scan-sm{
+  width: 360rpx;
+  height: 360rpx;
+  /* border: 1px #000 solid; */
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  box-shadow: 0rpx 0rpx 20rpx 10rpx #f2f2f5;
+
+}
+.scan{
+ height: 100vh;
+ width: 100vw;
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+  align-items: center;
+}
 .p{
   width: 200px;
   height: 200px; 
   padding-top: 100px;
 }
 .txt{
-  width: 200px;
-  height: 150px;
+  width: 400rpx;
+  height: 300rpx;
   position: fixed;
   align-items: center;
-  font-size:20px;
+  font-size:40rpx;
 }
 .search{
     width: 100%;
@@ -29,7 +49,7 @@
     justify-content: space-between;
     background: #f2f2f2;
     box-sizing: border-box;
-    padding: 5px 10px;
+    padding: 10rpx 20rpx;
     border-bottom: 1px solid #f5f5f5;
 }
 .search:after{
@@ -38,7 +58,7 @@
     left: 0;
     top: 0;
     right: 0;
-    height: 1px;
+    height: 2rpx;
     border-top: 1px solid #D7D6DC;
     color: #D7D6DC;
     -webkit-transform-origin: 0 0;
@@ -50,10 +70,10 @@
   display: flex;
   align-items: center;
   background: #fff;
-  border-radius: 5px;
+  border-radius: 10rpx;
   flex: 1;
   -webkit-box-flex: 1;
-  padding:2px 3px;
+  padding:4rpx 6rpx;
 }
 .search-bar i{
     display: inline-block;
@@ -71,14 +91,14 @@
   margin-right: .2em;
 }
 .search .cancel{
-  width: 40px;
+  width: 80rpx;
   text-align: right;
   color: #EF4746;
 }
 .search-bar input{
    text-align: left;
     flex: 1;
-    border-radius: 5px;
+    border-radius: 10rpx;
     background-color: #fff;
     color:#b2b2b2;
 }
@@ -89,10 +109,10 @@
   display: flex;
   align-items: center;
   background: #fff;
-  border-radius: 5px;
+  border-radius: 10rpx;
   flex: 1;
   -webkit-box-flex: 1;
-  padding: 5px 3px;
+  padding: 10rpx 6rpx;
   text-align: center;
   justify-content: center;
 }
@@ -113,16 +133,16 @@
 }
 .search-bars span{
     text-align: left;
-    border-radius: 5px;
+    border-radius: 10rpx;
     background-color: #fff;
     color:#b2b2b2;
 }
 .abs{
     border: 1px #b2b2b2 solid; 
     border: none; 
-    padding-left: 10px;
-    height: 20px; 
-    line-height: 20px;
+    padding-left: 20rpx;
+    height: 40rpx; 
+    line-height: 40rpx;
 }
 
 
@@ -152,8 +172,8 @@
     height: 90%;
 }
 .sub-left .ul-left view{
-    height: 60px;
-    line-height: 60px;
+    height: 120rpx;
+    line-height: 120rpx;
     background: #fafafa;
     border-bottom: 1px solid #f2f2f2;
 }
@@ -162,31 +182,31 @@
     color:#EF4746;
 }
 .sub-right{
-    width: 75%;
+    width: 77%;
     height: 90%;
     background: #fff;
-    margin-top:5px;
+    margin-top:10rpx;
 }
 .sub-right .title{
     width: 100%;
-    height: 50px;
-    line-height: 50px;
+    height: 100rpx;
+    line-height: 100rpx;
     text-align: left;
     background: #fff;
     box-sizing: border-box;
     color: #646464;
-    padding: 0px 10px 10px 10px
+    padding: 0px 20rpx 20rpx 20rpx
 }
 
 .sub-right .lists-img image{
-    width: 60px;
-    height: 60px;
+    width: 120rpx;
+    height: 120rpx;
 }
 .sub-right .lists-img p{
     text-align: center;
     color: #c0c0c0;
-    height:35px;
-    line-height:35px;
+    height:70rpx;
+    line-height:70rpx;
     overflow: hidden;
 }
 
@@ -222,17 +242,27 @@
     
 }
 .sub-lists {
-    padding-bottom:10px;
+    padding-bottom:20rpx;
 }
 .hdsp{
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  overflow:hidden;
+  height: 44rpx;
+  width: 100%;
+
 }
 .hdcss{
-  font-size: 16px;
-  margin-right: 10px;
+  font-size: 32rpx;
+  margin-right: 20rpx;
   color: #fd7601;
+  height: 44rpx;
+  width: 140rpx
+}
+.good-price{
+  width:240rpx;
+  font-size: 28rpx;
 }
 .coltex{
     text-align: left;
@@ -257,7 +287,7 @@
 .empty {
     color: #999;
     font-size: 32rpx;
-    padding: 20px;
+    padding: 40rpx;
 }
 .auth{
   width: 100%;
@@ -335,26 +365,26 @@
   position: fixed;   
   z-index: 1001;
   bottom: 100px;
-  max-height: 250px;  
+  max-height: 500rpx;  
 } 
 .label-cart-bar{
   color:#878787;
-  font-size:14px;
+  font-size:28rpx;
   border-left:4px solid #FF2DCD;
-  margin-left: 20px;
+  margin-left: 40rpx;
   display: flex;
   justify-content: space-between;
-  height:30px;
+  height:60rpx;
 
 }
 .icon-clear{
     color:#878787;
     float: right;
-    margin-right: 10px;
+    margin-right: 20rpx;
 }
 .label-clear{
     color:#878787;
-    font-size: 12px;
+    font-size: 24rpx;
 }
 .cart-scroll-list{
   height:450rpx;
@@ -362,16 +392,16 @@
 .cart-list-box{
   background:#FFFFFF;
   display:flex;
-  font-size:13px;
+  font-size:26rpx;
   align-items: center;
  
 }
 .list-info{
   width:50%;
-  padding:5px 15px;
+  padding:10rpx 30rpx;
 }
 .list-info-size{
-  font-size:10px;
+  font-size:20rpx;
   color:#B1B1B1;
 }
 .activity-color{
